--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -262,7 +262,7 @@ services:
   zkevm-mock-l1-network:
     container_name: zkevm-mock-l1-network
     # image: hermeznetwork/geth-zkevm-contracts@sha256:24754a773b803ce0de8278c02bb756757b09fda65dc993e560a0b76a09b88248
-    image: hermeznetwork/geth-zkevm-contracts:test
+    image: hermeznetwork/geth-zkevm-contracts:latest
     ports:
       - 8545:8545
       - 8546:8546
