--- a/test/permissionless-docker-compose.yml
+++ b/test/permissionless-docker-compose.yml
@@ -4,83 +4,6 @@ networks:
     name: zkevm
 services:
 
-  # TODO: remove this and use the permissionless sequencer
-  zkevm-sequencer:
-    container_name: zkevm-sequencer
-    image: ghcr.io/espressosystems/zkevm-node:hotshot-integration
-    ports:
-      - 9092:9091 # needed if metrics enabled
-    environment:
-      - ZKEVM_NODE_STATEDB_HOST=zkevm-state-db
-      - ZKEVM_NODE_POOL_HOST=zkevm-pool-db
-    volumes:
-      - ./test.keystore:/pk/keystore
-      - ./config/test.node.config.toml:/app/config.toml
-      - ./config/test.genesis.config.json:/app/genesis.json
-    command:
-      - "/bin/sh"
-      - "-c"
-      - "/app/zkevm-node run --genesis /app/genesis.json --cfg /app/config.toml --components sequencer"
-    depends_on:
-      zkevm-sync: # synchronizer runs state DB migrations
-        condition: service_started
-      zkevm-json-rpc: # let the JSON rpc run the pool DB migrations
-        condition: service_healthy
-
-  zkevm-json-rpc:
-    container_name: zkevm-json-rpc
-    image: ghcr.io/espressosystems/zkevm-node:hotshot-integration
-    ports:
-      - 8123:8123
-      - 8133:8133 # needed if WebSockets enabled
-      - 9091:9091 # needed if metrics enabled
-    environment:
-      - ZKEVM_NODE_STATEDB_HOST=zkevm-state-db
-      - ZKEVM_NODE_POOL_HOST=zkevm-pool-db
-      - ZKEVM_NODE_RPC_BROADCASTURI=zkevm-broadcast:61090
-    volumes:
-      - ./test.keystore:/pk/keystore
-      - ./config/test.node.config.toml:/app/config.toml
-      - ./config/test.genesis.config.json:/app/genesis.json
-    command:
-      - "/bin/sh"
-      - "-c"
-      - "/app/zkevm-node run --genesis /app/genesis.json --cfg /app/config.toml --components rpc"
-    depends_on:
-      zkevm-mock-l1-network:
-        condition: service_started
-      zkevm-sync: # synchronizer runs state DB migrations
-        condition: service_started
-      zkevm-pool-db:
-        condition: service_healthy
-    healthcheck:
-      # curl not installed in container, but wget is
-      test: "wget http://localhost:8123 -q --spider --tries 1 || exit 1"
-      interval: 2s
-      timeout: 1s
-      retries: 5
-
-  # zkevm-non-sequencer-json-rpc:
-  #   container_name: zkevm-non-sequencer-json-rpc
-  #   image: ghcr.io/espressosystems/zkevm-node:hotshot-integration
-  #   ports:
-  #     - 8125:8125
-  #   environment:
-  #     - ZKEVM_NODE_STATEDB_HOST=zkevm-state-db
-  #     - ZKEVM_NODE_POOL_HOST=zkevm-pool-db
-  #     - ZKEVM_NODE_RPC_SEQUENCERNODEURI=http://zkevm-json-rpc:8123
-  #   volumes:
-  #     - ./config/test.node.config.toml:/app/config.toml
-  #     - ./config/test.genesis.config.json:/app/genesis.json
-  #   command:
-  #     - "/bin/sh"
-  #     - "-c"
-  #     - "/app/zkevm-node run --genesis /app/genesis.json --cfg /app/config.toml --components rpc"
-  #   depends_on:
-  #     - zkevm-state-db
-  #     - zkevm-pool-db
-  #     - zkevm-json-rpc
-
   zkevm-aggregator:
     container_name: zkevm-aggregator
     image: ghcr.io/espressosystems/zkevm-node:hotshot-integration
@@ -88,6 +11,9 @@ services:
       - 50081:50081
       - 9093:9091 # needed if metrics enabled
     environment:
+      - ZKEVM_NODE_STATEDB_USER=state_user
+      - ZKEVM_NODE_STATEDB_PASSWORD=state_password
+      - ZKEVM_NODE_STATEDB_NAME=state_db
       - ZKEVM_NODE_STATEDB_HOST=zkevm-state-db
     volumes:
       - ./test.keystore:/pk/keystore
@@ -98,46 +24,7 @@ services:
       - "-c"
       - "/app/zkevm-node run --genesis /app/genesis.json --cfg /app/config.toml --components aggregator"
     depends_on:
-      - zkevm-sync # zkevm-sync runs state DB migrations
-
-
-  zkevm-sync:
-    container_name: zkevm-sync
-    image: ghcr.io/espressosystems/zkevm-node:hotshot-integration
-    environment:
-      - ZKEVM_NODE_STATEDB_HOST=zkevm-state-db
-    volumes:
-      - ./test.keystore:/pk/keystore
-      - ./config/test.node.config.toml:/app/config.toml
-      - ./config/test.genesis.config.json:/app/genesis.json
-    command:
-      - "/bin/sh"
-      - "-c"
-      - "/app/zkevm-node run --genesis /app/genesis.json --cfg /app/config.toml --components synchronizer"
-    depends_on:
-      zkevm-state-db:
-        condition: service_healthy
-      zkevm-mock-l1-network:
-        condition: service_started
-
-  # zkevm-broadcast:
-  #   container_name: zkevm-broadcast
-  #   image: ghcr.io/espressosystems/zkevm-node:hotshot-integration
-  #   environment:
-  #     - ZKEVM_NODE_STATEDB_HOST=zkevm-state-db
-  #   ports:
-  #     - 61090:61090
-  #   volumes:
-  #     - ./test.keystore:/pk/keystore
-  #     - ./config/test.node.config.toml:/app/config.toml
-  #     - ./config/test.genesis.config.json:/app/genesis.json
-  #   command:
-  #     - "/bin/sh"
-  #     - "-c"
-  #     - "sleep 5 && /app/zkevm-node run --genesis /app/genesis.json --cfg /app/config.toml --components broadcast-trusted-state"
-  #   depends_on:
-  #     zkevm-state-db:
-  #       condition: service_healthy
+      - zkevm-permissionless-node
 
   zkevm-state-db:
     container_name: zkevm-state-db
@@ -158,7 +45,7 @@ services:
       - POSTGRES_DB=state_db
     command: ["postgres", "-N", "500"]
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready", "-U", "state_user"]
+      test: ["CMD-SHELL", "pg_isready"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -206,49 +93,43 @@ services:
     command: >
       zkProver -c /usr/src/app/config.json
     depends_on:
-      - zkevm-sync # zkevm-sync runs state DB migrations
+      - zkevm-permissionless-node
 
-  # zkevm-permissionless-db:
-  #   container_name: zkevm-permissionless-db
-  #   image: postgres
-  #   deploy:
-  #     resources:
-  #       limits:
-  #         memory: 2G
-  #       reservations:
-  #         memory: 1G
-  #   ports:
-  #     - 5437:5432
-  #   environment:
-  #     - POSTGRES_USER=test_user
-  #     - POSTGRES_PASSWORD=test_password
-  #     - POSTGRES_DB=test_db
-  #   command: ["postgres", "-N", "500"]
-
-  # zkevm-permissionless-node:
-  #   container_name: zkevm-permissionless-node
-  #   image: ghcr.io/espressosystems/zkevm-node:hotshot-integration
-  #   ports:
-  #     - 8126:8126
-  #   environment:
-  #     - ZKEVM_NODE_TRUSTED=false
-  #     - ZKEVM_NODE_STATEDB_USER=test_user
-  #     - ZKEVM_NODE_STATEDB_PASSWORD=test_password
-  #     - ZKEVM_NODE_STATEDB_NAME=state_db
-  #     - ZKEVM_NODE_STATEDB_HOST=zkevm-permissionless-db
-  #     - ZKEVM_NODE_POOL_USER=test_user
-  #     - ZKEVM_NODE_POOL_PASSWORD=test_password
-  #     - ZKEVM_NODE_POOL_NAME=pool_db
-  #     - ZKEVM_NODE_POOL_HOST=zkevm-permissionless-db
-  #     - ZKEVM_NODE_RPC_PORT=8126
-  #   volumes:
-  #     - ./test.keystore:/pk/keystore
-  #     - ./config/test.node.config.toml:/app/config.toml
-  #     - ./config/test.genesis.config.json:/app/genesis.json
-  #     - ./config/single_db_server.sql:/docker-entrypoint-initdb.d/init.sql
-  #   command:
-  #     - "/bin/sh"
-  #     - "-c"
-  #     - "/app/zkevm-node run --genesis /app/genesis.json --cfg /app/config.toml --components \"rpc,synchronizer\""
-  #   depends_on:
-  #     - zkevm-permissionless-db
+  zkevm-permissionless-node:
+    container_name: zkevm-permissionless-node
+    image: ghcr.io/espressosystems/zkevm-node:hotshot-integration
+    ports:
+      - 8126:8126
+    environment:
+      - ZKEVM_NODE_TRUSTED=false
+      - ZKEVM_NODE_STATEDB_USER=state_user
+      - ZKEVM_NODE_STATEDB_PASSWORD=state_password
+      - ZKEVM_NODE_STATEDB_NAME=state_db
+      - ZKEVM_NODE_STATEDB_HOST=zkevm-state-db
+      - ZKEVM_NODE_POOL_USER=pool_user
+      - ZKEVM_NODE_POOL_PASSWORD=pool_password
+      - ZKEVM_NODE_POOL_NAME=pool_db
+      - ZKEVM_NODE_POOL_HOST=zkevm-pool-db
+      - ZKEVM_NODE_RPC_PORT=8126
+      - ZKEVM_NODE_RPC_SEQUENCERNODEURI=http://hermez-adaptor:$ESPRESSO_ZKEVM_ADAPTOR_PORT
+    volumes:
+      - ./test.keystore:/pk/keystore
+      - ./config/test.node.config.toml:/app/config.toml
+      - ./config/test.genesis.config.json:/app/genesis.json
+    command:
+      - "/bin/sh"
+      - "-c"
+      - "/app/zkevm-node run --genesis /app/genesis.json --cfg /app/config.toml --components \"rpc,synchronizer\""
+    depends_on:
+      zkevm-mock-l1-network:
+        condition: service_started
+      zkevm-state-db:
+        condition: service_healthy
+      zkevm-pool-db:
+        condition: service_healthy
+    healthcheck:
+      # curl not installed in container, but wget is
+      test: "wget http://localhost:8126 -q --spider --tries 1 || exit 1"
+      interval: 2s
+      timeout: 1s
+      retries: 5
