--- a/test/permissionless-docker-compose.yml
+++ b/test/permissionless-docker-compose.yml
@@ -15,6 +15,11 @@ services:
       - ZKEVM_NODE_STATEDB_PASSWORD=state_password
       - ZKEVM_NODE_STATEDB_NAME=state_db
       - ZKEVM_NODE_STATEDB_HOST=zkevm-state-db
+      # - ZKEVM_NODE_AGGREGATOR_VERIFYPROOFINTERVAL=10s # Defaults to 90s
+      # - ZKEVM_NODE_AGGREGATOR_RETRYTIME=2s # Defaults to 5s
+      - ZKEVM_NODE_ETHERMAN_POEADDR
+      - ZKEVM_NODE_ETHERMAN_MATICADDR
+      - ZKEVM_NODE_ETHERMAN_GLOBALEXITROOTMANAGERADDR
     volumes:
       - ./test.keystore:/pk/keystore
       - ./config/test.node.config.toml:/app/config.toml
@@ -46,9 +51,9 @@ services:
     command: ["postgres", "-N", "500"]
     healthcheck:
       test: ["CMD-SHELL", "pg_isready"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      interval: 0.5s
+      timeout: 0.5s
+      retries: 10
 
   zkevm-pool-db:
     container_name: zkevm-pool-db
@@ -68,17 +73,20 @@ services:
     command: ["postgres", "-N", "500"]
     healthcheck:
       test: ["CMD-SHELL", "pg_isready"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      interval: 0.5s
+      timeout: 0.5s
+      retries: 10
 
   zkevm-mock-l1-network:
     container_name: zkevm-mock-l1-network
-    image: ghcr.io/espressosystems/geth-zkevm-contracts:hotshot-integration
+    image: ghcr.io/foundry-rs/foundry:latest
     ports:
       - 8545:8545
       - 8546:8546
-    command: ["--http", "--http.api", "admin,eth,debug,miner,net,txpool,personal,web3",  "--http.addr", "0.0.0.0","--http.corsdomain", "*", "--http.vhosts" ,"*", "--ws", "--ws.origins", "*", "--ws.addr", "0.0.0.0", "--dev", "--datadir", "/geth_data", "--syncmode", "full"]
+    # The way the foundry image handles arguments is strange, the double quotes
+    # make it work here.
+    command: "'anvil --host 0.0.0.0'"
+    stop_signal: SIGKILL
 
   zkevm-prover:
     container_name: zkevm-prover
@@ -94,6 +102,7 @@ services:
       zkProver -c /usr/src/app/config.json
     depends_on:
       - zkevm-permissionless-node
+    stop_signal: SIGKILL
 
   zkevm-permissionless-node:
     container_name: zkevm-permissionless-node
@@ -112,6 +121,9 @@ services:
       - ZKEVM_NODE_POOL_HOST=zkevm-pool-db
       - ZKEVM_NODE_RPC_PORT=8126
       - ZKEVM_NODE_RPC_SEQUENCERNODEURI=http://hermez-adaptor:$ESPRESSO_ZKEVM_ADAPTOR_PORT
+      - ZKEVM_NODE_ETHERMAN_POEADDR
+      - ZKEVM_NODE_ETHERMAN_MATICADDR
+      - ZKEVM_NODE_ETHERMAN_GLOBALEXITROOTMANAGERADDR
     volumes:
       - ./test.keystore:/pk/keystore
       - ./config/test.node.config.toml:/app/config.toml
@@ -130,6 +142,6 @@ services:
     healthcheck:
       # curl not installed in container, but wget is
       test: "wget http://localhost:8126 -q --spider --tries 1 || exit 1"
-      interval: 2s
-      timeout: 1s
-      retries: 5
+      interval: 0.5s
+      timeout: 0.5s
+      retries: 10
