--- a/test/permissionless-docker-compose.yml
+++ b/test/permissionless-docker-compose.yml
@@ -51,7 +51,7 @@ services:
     command: ["postgres", "-N", "500"]
     healthcheck:
       test: ["CMD-SHELL", "pg_isready"]
-      interval: 0.5s
+      interval: 1s
       timeout: 0.5s
       retries: 10
 
@@ -73,9 +73,21 @@ services:
     command: ["postgres", "-N", "500"]
     healthcheck:
       test: ["CMD-SHELL", "pg_isready"]
-      interval: 0.5s
+      interval: 1s
       timeout: 0.5s
       retries: 10
+
+  # This is the original L1 zkevm-node uses, leaving it here because it's sometimes
+  # useful to switch to it for debugging.
+  #
+  # zkevm-mock-l1-network:
+  #   container_name: zkevm-mock-l1-network
+  #   image: ghcr.io/espressosystems/geth-zkevm-contracts:hotshot-integration
+  #   ports:
+  #     - 8545:8545
+  #     - 8546:8546
+  #   command: ["--http", "--http.api", "admin,eth,debug,miner,net,txpool,personal,web3",  "--http.addr", "0.0.0.0","--http.corsdomain", "*", "--http.vhosts" ,"*", "--ws", "--ws.origins", "*", "--ws.addr", "0.0.0.0", "--dev", "--datadir", "/geth_data", "--syncmode", "full"]
+  #   stop_signal: SIGKILL
 
   zkevm-mock-l1-network:
     container_name: zkevm-mock-l1-network
@@ -85,7 +97,7 @@ services:
       - 8546:8546
     # The way the foundry image handles arguments is strange, the double quotes
     # make it work here.
-    command: "'anvil --host 0.0.0.0'"
+    command: "'anvil --host 0.0.0.0 --chain-id 1337'"
     stop_signal: SIGKILL
 
   zkevm-prover:
