--- a/test/permissionless-docker-compose.yml
+++ b/test/permissionless-docker-compose.yml
@@ -48,9 +48,11 @@ services:
       - POSTGRES_USER=state_user
       - POSTGRES_PASSWORD=state_password
       - POSTGRES_DB=state_db
+      - PGUSER=state_user # prevent FATAL logs caused by healtheck
+      - PGDATABASE=state_db # prevent FATAL logs caused by healtheck
     command: ["postgres", "-N", "500"]
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready"]
+      test: ["CMD-SHELL", "pg_isready", "-q"]
       interval: 1s
       timeout: 0.5s
       retries: 10
@@ -70,9 +72,11 @@ services:
       - POSTGRES_USER=pool_user
       - POSTGRES_PASSWORD=pool_password
       - POSTGRES_DB=pool_db
+      - PGUSER=pool_user # prevent FATAL logs caused by healtheck
+      - PGDATABASE=pool_db # prevent FATAL logs caused by healtheck
     command: ["postgres", "-N", "500"]
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready"]
+      test: ["CMD-SHELL", "pg_isready", "-q"]
       interval: 1s
       timeout: 0.5s
       retries: 10
