Make ports configurable

--- a/test/permissionless-docker-compose.yml
+++ b/test/permissionless-docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - ZKEVM_NODE_ETHERMAN_POEADDR
       - ZKEVM_NODE_ETHERMAN_MATICADDR
       - ZKEVM_NODE_ETHERMAN_GLOBALEXITROOTMANAGERADDR
+      - ZKEVM_NODE_ETHERMAN_URL=http://zkevm-mock-l1-network:$ESPRESSO_ZKEVM_L1_PORT
     volumes:
       - ./test.keystore:/pk/keystore
       - ./config/test.node.config.toml:/app/config.toml
@@ -93,11 +94,13 @@ services:
     container_name: zkevm-mock-l1-network
     image: ghcr.io/foundry-rs/foundry:latest
     ports:
-      - 8545:8545
-      - 8546:8546
+      - "$ESPRESSO_ZKEVM_L1_PORT:$ESPRESSO_ZKEVM_L1_PORT"
+      # - 8546:8546
+    environment:
+      - ESPRESSO_ZKEVM_L1_PORT
     # The way the foundry image handles arguments is strange, the double quotes
     # make it work here.
-    command: "'anvil --host 0.0.0.0 --chain-id 1337'"
+    command: "'anvil --host 0.0.0.0 --port $ESPRESSO_ZKEVM_L1_PORT --chain-id 1337'"
     stop_signal: SIGKILL
 
   zkevm-prover:
@@ -120,7 +123,7 @@ services:
     container_name: zkevm-permissionless-node
     image: ghcr.io/espressosystems/zkevm-node:hotshot-integration
     ports:
-      - 8126:8126
+      - $ESPRESSO_ZKEVM_L2_PORT:$ESPRESSO_ZKEVM_L2_PORT
     environment:
       - ZKEVM_NODE_TRUSTED=false
       - ZKEVM_NODE_STATEDB_USER=state_user
@@ -131,8 +134,9 @@ services:
       - ZKEVM_NODE_POOL_PASSWORD=pool_password
       - ZKEVM_NODE_POOL_NAME=pool_db
       - ZKEVM_NODE_POOL_HOST=zkevm-pool-db
-      - ZKEVM_NODE_RPC_PORT=8126
+      - ZKEVM_NODE_RPC_PORT=$ESPRESSO_ZKEVM_L2_PORT
       - ZKEVM_NODE_RPC_SEQUENCERNODEURI=http://hermez-adaptor:$ESPRESSO_ZKEVM_ADAPTOR_PORT
+      - ZKEVM_NODE_ETHERMAN_URL=http://zkevm-mock-l1-network:$ESPRESSO_ZKEVM_L1_PORT
       - ZKEVM_NODE_ETHERMAN_POEADDR
       - ZKEVM_NODE_ETHERMAN_MATICADDR
       - ZKEVM_NODE_ETHERMAN_GLOBALEXITROOTMANAGERADDR
@@ -153,7 +157,7 @@ services:
         condition: service_healthy
     healthcheck:
       # curl not installed in container, but wget is
-      test: "wget http://localhost:8126 -q --spider --tries 1 || exit 1"
+      test: "wget http://localhost:$ESPRESSO_ZKEVM_L2_PORT -q --spider --tries 1 || exit 1"
       interval: 0.5s
       timeout: 0.5s
       retries: 10
