Build and push docker on git tags

--- a/.github/workflows/espresso-push-docker.yml
+++ b/.github/workflows/espresso-push-docker.yml
@@ -1,9 +1,11 @@
 on:
   push:
     branches:
-    - main
-    - ci
-    - hotshot-integration
+      - main
+      - ci
+      - hotshot-integration
+    tags:
+      - 'v*'
   workflow_dispatch:
 
 jobs:
