Add new config to toml file, to set it via env var

--- a/test/config/test.node.config.toml
+++ b/test/config/test.node.config.toml
@@ -31,6 +31,8 @@ URL = "http://zkevm-mock-l1-network:8545"
 PoEAddr = "0x8A791620dd6260079BF849Dc5567aDC3F2FdC318"
 MaticAddr = "0x5FbDB2315678afecb367f032d93F642f64180aa3"
 GlobalExitRootManagerAddr = "0xa513E6E4b8f2a923D98304ec87F64353C4D5C853"
+HotShotAddr = "0x0000000000000000000000000000000000000000"
+HotShotQueryServiceURL = "NOT_SET"
 L1ChainID = 1337
 MultiGasProvider = false
 	[Etherscan]
