Prepare zkEVM node to work with HotShot preconfirmations
* Add a new configuration flag to switch between using L1
  confirmations and HotShot sequencer confirmations for detecting
  new blocks
* Ignore NewBlocks events from L1 if preconfirmations flag is
  enabled
* Use L1 block number associated with each L2 block by the
  sequencer, instead of using L1 block number from when L2 block
  was sent to rollup contract

Next steps: when L1 flag is enabled, generate SequenceBatchcesOrder
events when new blocks are provided by the query service.

--- a/test/config/test.node.config.toml
+++ b/test/config/test.node.config.toml
@@ -33,6 +33,7 @@ MaticAddr = "0x5FbDB2315678afecb367f032d93F642f64180aa3"
 GlobalExitRootManagerAddr = "0xa513E6E4b8f2a923D98304ec87F64353C4D5C853"
 HotShotAddr = "0x0000000000000000000000000000000000000000"
 HotShotQueryServiceURL = "NOT_SET"
+UsePreconfirmations = false
 L1ChainID = 1337
 MultiGasProvider = false
 	[Etherscan]
