Add flag to ignore genesis block number check

--- a/test/config/test.node.config.toml
+++ b/test/config/test.node.config.toml
@@ -55,6 +55,7 @@ DefaultSenderAddress = "0x1111111111111111111111111111111111111111"
 SyncInterval = "1s"
 SyncChunkSize = 100
 GenBlockNumber = 63
+IgnoreGenBlockNumberCheck = false
 
 [Sequencer]
 MaxSequenceSize = "2000000"
