--- a/test/config/test.node.config.toml
+++ b/test/config/test.node.config.toml
@@ -112,7 +112,7 @@ PrivateKeys = [
 	{Path = "/pk/sequencer.keystore", Password = "testonly"},
 	{Path = "/pk/aggregator.keystore", Password = "testonly"}
 ]
-PollInterval = "1s"
+PollingInterval = "1s"
 
 [L2GasPriceSuggester]
 Type = "follower"
