Offset batch number for espresso sequencer
A new env var needs to be set to the hotshot block number in the hotshot
contract at the block the rollup contract is the deployed.

--- a/test/config/test.node.config.toml
+++ b/test/config/test.node.config.toml
@@ -35,6 +35,7 @@ HotShotAddr = "0x0000000000000000000000000000000000000000"
 HotShotQueryServiceURL = "NOT_SET"
 L1ChainID = 1337
 MultiGasProvider = false
+GenesisHotShotBlockNumber = 1
 	[Etherscan]
 		ApiKey = ""
 
