--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,7 +6,7 @@ on:
       - master
       - develop
       - update-external-dependencies
-      - 'release/**'
+      - release-*
   pull_request:
 jobs:
   lint:
